--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -115,6 +115,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#687089"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
         android:text="Registrar"
         app:backgroundTint="#687089"
         android:layout_marginTop="20dp"
