--- a/app/src/main/res/layout/activity_info_area_medica.xml
+++ b/app/src/main/res/layout/activity_info_area_medica.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EFF1F8"
-    tools:context=".areajuridicaseguimiento">
+    tools:context=".info_area_medica">
 
     <TextView
         android:id="@+id/text1"
