--- a/app/src/main/res/layout/activity_area_psicologia.xml
+++ b/app/src/main/res/layout/activity_area_psicologia.xml
@@ -37,6 +37,17 @@
         android:text="Registrar Nuevo Beneficiario"
         app:backgroundTint="#687089"
         android:layout_below="@+id/text1"/>
+    <Button
+        android:id="@+id/seguimiento2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:background="#687089"
+        android:text="Ver lista de registros"
+        app:backgroundTint="#687089"
+        android:layout_below="@+id/nuevobene2"/>
 
     <Button
         android:id="@+id/canalizar2"
