--- a/app/src/main/res/layout/activity_addcase_area_trabajosocial.xml
+++ b/app/src/main/res/layout/activity_addcase_area_trabajosocial.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#EFF1F8"
     tools:context=".addcase_area_trabajosocial">
+
     <TextView
         android:id="@+id/text1"
         android:layout_width="match_parent"
@@ -103,7 +105,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#687089"
-        android:text="Registrar"
+        android:text="Registrar y pasar al formulario 1"
         app:backgroundTint="#687089"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="50dp"
