--- a/app/src/main/res/layout/activity_area_trabajosocial.xml
+++ b/app/src/main/res/layout/activity_area_trabajosocial.xml
@@ -37,6 +37,7 @@
         android:text="Registrar Nuevo Beneficiario"
         app:backgroundTint="#687089"
         android:layout_below="@+id/text1"/>
+
     <Button
         android:id="@+id/seguimiento2"
         android:layout_width="match_parent"
@@ -48,6 +49,17 @@
         app:backgroundTint="#687089"
         android:layout_marginTop="20dp"
         android:layout_below="@+id/nuevobene2"/>
+
+    <Button
+        android:id="@+id/exit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/seguimiento2"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="20dp"
+        android:text="Cerrar Sesión"
+        app:backgroundTint="#687089"/>
 
 
 
