--- a/app/src/main/res/layout/activity_info_area_psicologica.xml
+++ b/app/src/main/res/layout/activity_info_area_psicologica.xml
@@ -299,8 +299,9 @@
         android:background="#687089"
         android:text="Ver notas"
         app:backgroundTint="#687089" />
+
     <Button
-        android:id="@+id/cnalzar"
+        android:id="@+id/verDatosPsicologicos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/viewnotes"
@@ -308,10 +309,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginRight="50dp"
         android:background="#687089"
-        android:text="Canalizar"
+        android:text="Datos Psicologia"
         app:backgroundTint="#687089" />
-
-
 
 
 </RelativeLayout>
