--- a/app/src/main/res/layout/activity_seguimiento_trabajosocial.xml
+++ b/app/src/main/res/layout/activity_seguimiento_trabajosocial.xml
@@ -20,7 +20,7 @@
     <ListView
         android:id="@+id/libenefi"
         android:layout_width="match_parent"
-        android:layout_height="580dp"
+        android:layout_height="500dp"
         android:layout_below="@+id/text1"
         android:background="#EFF1F8"
         android:textColor="#000000"></ListView>
@@ -35,4 +35,15 @@
         app:backgroundTint="#687089"
         android:layout_marginTop="20dp"
         android:layout_below="@+id/libenefi"/>
+    <Button
+        android:id="@+id/submit2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:background="#687089"
+        android:text="Hacer parentesco"
+        app:backgroundTint="#687089"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/submit"/>
 </RelativeLayout>
