--- a/app/src/main/res/layout/activity_vercasos_area_psicologia.xml
+++ b/app/src/main/res/layout/activity_vercasos_area_psicologia.xml
@@ -69,42 +69,16 @@
         android:inputType="text"
         android:textColorHint="#99000000" />
 
-    <TextView
-        android:id="@+id/texta3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="50dp"
-        android:layout_below="@+id/descripcion"
-        android:text="Estado"
-        android:textAlignment="center"
-        android:textSize="22sp"/>
-    <TextView
-        android:id="@+id/estado"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@+id/texta3"
-        android:textAlignment="center"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:background="#FFFFFF"
-        android:ems="10"
-        android:inputType="number"
-        android:textColor="#000000"
-        android:textColorHint="#99000000" />
-
-
 
     <Button
         android:id="@+id/registrarcaso"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#687089"
-        android:text="Registrar"
+        android:text="Agregar Reporte Psicologico"
         app:backgroundTint="#687089"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
-        android:layout_below="@+id/estado"/>
+        android:layout_below="@+id/descripcion"/>
 </RelativeLayout>
